--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,6 +7,18 @@
   pointer-events: none;
 }
 
+/* .ui.menu {
+  border: 0;
+  border-bottom: 1px solid rgba(34,36,38,.15);
+  box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
+  border-radius: 0px;
+  width: 100%;
+}   */
+.ui.menu>.container {
+  justify-content: center;
+  padding: 0.5rem;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
